--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "klevu/php-sdk-pipelines",
     "description": "Klevu SDK integration with pipelines library",
     "type": "library",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "require": {
         "php": "~8.1|~8.2",
-        "klevu/php-sdk": "0.1.0",
-        "klevu/php-pipelines": "0.1.0",
+        "klevu/php-sdk": "0.2.0",
+        "klevu/php-pipelines": "0.2.0",
         "psr/container": "*",
-        "php-http/discovery": "~1.15",
-        "guzzlehttp/guzzle": "^7.8"
+        "php-http/discovery": "~1.15"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
